--- a/src/components/Bars.astro
+++ b/src/components/Bars.astro
@@ -1,8 +1,10 @@
 ---
 import LeftSideTopBar from './bars/LeftSideTopBar';
+import RightSideTopBar from './bars/RightSideTopBar';
 import TopBar from './bars/TopBar';
 ---
 <div>
     <LeftSideTopBar />
     <TopBar />
+    <RightSideTopBar />
 </div>
