--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Hello from '../components/hello.tsx';
+import Index from '../components/index.tsx';
 import Layout from '../layouts/Layout.astro';
 import '../styles/global.css';
 ---
 
 <Layout>
-	<Hello />
+	<Index />
 </Layout>
